# bhf_assessment

docker/: Dockerfile  entrypoint.sh
install/: local_setup.sh  setup.sh
install/bhf_vo/lib/bhf_vo/: bhf_vo_node
install/bhf_vo/share/bhf_vo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bhf_vo/share/bhf_vo/cmake/: bhf_voConfig.cmake
log/: latest_build
src/bhf_vo/: CMakeLists.txt
src/bhf_vo/src/: bhf_vo_node.cpp
